# DC-Motor-Controller-Firmware

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  Szeminariumi.docx  clang-format  cppcheck.sh  format.sh  sdkconfig.defaults
.github/workflows/: README.md  build.yml  ci.yml  release.yml
Application/MotorControl/: CMakeLists.txt
DC_Motor_Controller_Firmware/main/: main.cpp
Example/Communication/: README.md
Example/DRV8876/: CMakeLists.txt  README.md
Example/Encoder/: CMakeLists.txt  README.md
Example/Encoder_Motor/: CMakeLists.txt
Example/FuzzyPIDControl/: README.md
Example/MotorControl/: CMakeLists.txt  README.md  sdkconfig.defaults
Example/RGBLed/: CMakeLists.txt  README copy.md  README.md
Example/USB/: README.md
components/Encoder/: CMakeLists.txt
components/Encoder/include/: Encoder.hpp  EncoderProcessing.hpp
components/Encoder/src/: Encoder.cpp  EncoderProcessing.cpp
components/efll/: Fuzzy.cpp  (+17 more)
components/motorControl/: CMakeLists.txt
components/motorControl/include/: Actuator.hpp  ControlLaw.hpp  ControlTask.hpp  MotionDetector.hpp  MotionGuard.hpp  MotionMonitor.hpp  MotionProfile.hpp  MotionProfiler.hpp  MotorControl.hpp  MotorControlConfig.hpp  SettleDetector.hpp  SoftLimiter.hpp  SoftLimits.hpp  StallDetector.hpp  motorControl.hpp
components/motorControl/src/: Actuator.cpp  ControlLaw.cpp  ControlTask.cpp  MotionDetector.cpp  MotionGuard.cpp  MotionMonitor.cpp  MotionProfile.cpp  MotionProfiler.cpp  MotorControl.cpp  SettleDetector.cpp  SoftLimiter.cpp  SoftLimits.cpp  StallDetector.cpp  motorControl.cpp
docs/: README.md
main/: CMakeLists.txt  main.cpp
scripts/: README.md  build.sh  cppcheck.sh  flash.sh  format.sh  monitor.sh  pre-commit.sh  verify-structure.sh
(+90 files in other folders)
